<resources>
    <string name="app_name">UninaCampus</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Entra</string>
    <string name="action_sign_in_short">Entra</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="la_tua_carriera">Questo è il tuo libretto di esami:</string>
...
    <string name="dummy_button">Dummy Button</string>
    <string name="dummy_content">DUMMY\nCONTENT</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="action_sign_up">Registrati</string>
    <string name="send">Send</string>
    <string name="back">Back</string>
    <string name="aggiorna">+</string>
    <string name="voto">Voto:</string>
    <string name="done">Done</string>
    <string name="lode">Lode</string>
    <string name="button">Button</string>
    <string name="sicuro_di_eliminare_esame_selezionato">Sicuro di eliminare esame selezionato?</string>
    <string name="cancel">Cancel</string>
    <string name="to">To:</string>
    <string name="subject">Subject:</string>
    <string name="body">Body</string>
    <string name="password">Password</string>
    <string name="corsi_che_segui">Corsi che segui:</string>
    <string name="modifica">Modifica</string>
    <string name="mail">Mail</string>
    <string name="piano">Piano :</string>
    <string name="marker_blu_pos_tua">Marker blu: pos. TUA</string>
    <string name="marker_rosso_pos_aula">Marker rosso: pos. AULA</string>
    <string name="inquadra_un_qr_code_fuori_un_aula_per_vederne_l_orario_odierno">Inquadra un QR Code fuori un\'aula per vederne l\'orario odierno!</string>
    <string name="registra">Registra</string>
    <string name="stop">Stop</string>
    <string name="upload">Upload</string>
    <string name="choosefile">ChooseFile</string>
    <string name="lista_registrazioni">Lista Registrazioni</string>
    <string name="download">Download</string>
    <string name="conferma">Conferma</string>
    <string name="indietro">Indietro</string>
    <string name="nome">Nome</string>
    <string name="annulla">Annulla</string>
    <string name="salva">Salva</string>
    <string name="andiamo">Andiamo!</string>
    <string name="chiudi">Chiudi</string>
    <string name="title_activity_login2">Sign in</string>


</resources>
...
