...
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <!-- The ActionBar displayed at the top -->
            <include
                layout="@layout/toolbar"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />

            <!-- The main content view where fragments are loaded -->
            <FrameLayout
                android:id="@+id/flContent"
...
                            android:layout_weight="1"
                            android:text="@string/corsi_che_segui"
                            android:textSize="24sp"
                            android:textStyle="bold" />

                        <Button
                            android:id="@+id/modificaElencoCorsi"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:background="@android:color/holo_blue_dark"
                            android:text="@string/modifica"
                            android:textColor="@color/white"
...

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="300dp">

                        <ListView
                            android:id="@+id/elencoCorsiSeguiti"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:layout_alignParentBottom="true"
                            android:layout_alignParentStart="true"
                            android:layout_marginBottom="24dp"
                            android:layout_weight="1"
...
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="horizontal"
                        android:textAlignment="center">

                        <Button
                            android:id="@+id/mailBtn"
                            android:layout_width="10dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@android:color/holo_blue_dark"
                            android:text="@string/mail"
                            android:textColor="@android:color/background_light"
                            android:textSize="18sp" />

                        <Button
                            android:id="@+id/recorderBtn"
                            android:layout_width="10dp"
                            android:layout_height="50dp"
                            android:layout_margin="5dp"
                            android:layout_weight="1"
                            android:background="@android:color/holo_blue_dark"
                            android:text="@string/registra"
...


        </LinearLayout>
    </LinearLayout>

    <android.support.design.widget.NavigationView
        android:id="@+id/nvView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:background="@android:color/white"
        app:headerLayout="@layout/nav_header"
        app:itemIconTint="@android:color/transparent"
...
